# pyadicht

./: .gitignore  LICENSE  README.md  pyproject.toml
src/adicht/: __init__.py  cli.py  model.py  portable.py
src/adicht/backends/: __init__.py  dll.py  portable_backend.py
tests/: test_roundtrip.py
